<resources>
    <string name="app_name">CASADROID</string>
    <string name="title_comandos">Comandos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Sair</string>
    <string name="title_activity_settings">Sair</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="titulo_acao_geral">TODA RESIDÊNCIA</string>
    <string name="descricao_acao_geral">TODAS AUTOMACÕES</string>
    <string name="titulo_rele01">Sala</string>
    <string name="descricao_acao_rele01">TV/PLAYSTATION/DUOSAT</string>
    <string name="titulo_rele02">Sala</string>
    <string name="descricao_acao_rele02">LUZ SALA DE TV</string>
    <string name="titulo_rele03">Sala</string>
    <string name="descricao_acao_rele03">LUZ SALA </string>
    <string name="titulo_rele04">Sala</string>
    <string name="descricao_acao_rele04">LUZ HALL</string>
    <string name="titulo_rele05">Ativar/Desativar Grupo 05</string>
    <string name="descricao_acao_rele05">Liga ou Desliga Grupo 05</string>
    <string name="titulo_rele06">Ativar/Desativar Grupo 06</string>
    <string name="descricao_acao_rele06">Liga ou Desliga Grupo 06</string>
    <string name="titulo_rele07">Ativar/Desativar Grupo 07</string>
    <string name="descricao_acao_rele07">Liga ou Desliga Grupo 07</string>
    <string name="titulo_rele08">Ativar/Desativar Grupo 08</string>
    <string name="descricao_acao_rele08">Liga ou Desliga Grupo 08</string>


    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="title_activity_agenda">Agendamentos</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Conectar</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email inválido</string>
    <string name="error_invalid_password">Senha tem que ter mais de 4 caracteres</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">1300571689991439</string>
</resources>
